# riscv-openocd

./: .gitignore  configure.ac
src/: Makefile.am  openocd.cfg
src/jtag/: core.c  interfaces.c
src/jtag/drivers/: Makefile.am
src/jtag/drivers/verport/: Makefile.am  Vtap_ext.h  sim_main.cpp  verport.c
tcl/interface/ftdi/nexys4ddr/rocket/: openocd.cfg
